--- a/home.html
+++ b/home.html
@@ -4,9 +4,75 @@
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
     <link rel="stylesheet" href="css/style.css">
+    <script src="js/script.js"></script>
     <title>Logan Duncan Digital</title>
 </head>
 <body>
+
+    <nav>
+        <img src="img/black-png-no-outline125x200.png" alt="Logo, bold letters 'LDD'."/>
+        <span>Organized, Efficent, Driven</span>
+        <ul>
+            <li>Home</li>
+            <li>Featured Work</li>
+            <li>About</li>
+            <li>Contact</li>
+        </ul>
+    </nav>
+
+    <main>
+
+        <div id="home">
+            <img />
+            <p></p>
+
+            <span>see some of my work below</span>
+            <button></button>
+        </div>
+
+        <div id="featured">
+            <div class="featuredwork">
+                <img />
+                <button></button>
+            </div>
+            <div class="featuredwork">
+                <img />
+                <button></button>
+            </div>
+            <div class="featuredwork">
+                <img />
+                <button></button>
+            </div>
+            <div class="featuredwork">
+                <img />
+                <button></button>
+            </div>
+        </div>
+
+        <div id="about">
+            <p>Info about me here</p>
+            <ul id="skills">
+                <ul>Languages/Frameworks</ul>
+                    <li>PHP</li>
+                    <li>.NET</li>
+                <ul>Tools</ul>
+                    <li>Visual Studio</li>
+                    <li>Trello</li>
+                <ul>Specialities</ul>
+                    <li>User Experience</li>
+                    <li>Planning</li>
+            </ul>
+        </div>
+
+        <div id="contact">
+            <form action=""></form>
+            <p> linked in info</p>
+        </div>
+
+    </main>
+
+    <footer></footer>
+
     
 </body>
 </html>
