--- a/index.html
+++ b/index.html
@@ -46,12 +46,13 @@
 
         <div class="logo">
           <a href="index.html"><img src="assets/img/black-no-outline-600x400.png" alt="logo"></a>
+          <p class="slogan">Organized, Efficent, Driven</p>
         </div>
 
         <div class="responsive"><i data-icon="m" class="ion-navicon-round"></i></div>
 
         <ul class="nav-menu list-unstyled">
-          <li><a href="index.html" class="smoothScroll">Home</a></li>
+          <!-- <li><a href="index.html" class="smoothScroll">Home</a></li> -->
           <li><a href="#about" class="smoothScroll">About</a></li>
           <li><a href="#portfolio" class="smoothScroll">Portfolio</a></li>
           <li><a href="#contact" class="smoothScroll">Contact</a></li>
@@ -62,7 +63,7 @@
   </nav><!-- End Navbar -->
   
   <!-- ======= Hero Section ======= -->
-  <div id="hero" class="home">
+  <!-- <div id="hero" class="home">
 
     <div class="container">
       <div class="hero-content">
@@ -79,7 +80,7 @@
         </ul>
       </div>
     </div>
-  </div><!-- End Hero -->  
+  </div> --> 
 
   <main id="main">
 
@@ -117,7 +118,7 @@
 
           <div class="services-block">
 
-            <i class="ion-ios-browsers-outline"></i>
+            <i class="ion-ios-world-outline"></i>
             <span>Programming Languages</span>
             <p class="separator">PHP, Python, C#, .NET, HTML, CSS, JavaScript, and ReactJS.</p>
 
@@ -125,7 +126,7 @@
 
           <div class="services-block">
 
-            <i class="ion-ios-analytics-outline"></i>
+            <i class="ion-ios-download-outline"></i>
             <span>Database</span>
             <p class="separator">Well versed in phpMyAdmin, SQL, SSMS. Database integration in Visual Studio</p>
 
@@ -141,10 +142,16 @@
 
           <div class="services-block">
 
-            <i class="ion-ios-color-wand-outline"></i>
+            <i class="ion-ios-bolt-outline"></i>
             <span>Specialities</span>
             <p class="separator">User Experience, Planning, Organization, Client Feedback</p>
 
+          </div>
+
+          <div class="services-block">
+            <i class="ion-ios-browsers-outline"></i>
+            <span>Web Skills</span>
+            <p class="separator">FILL IN HERE</p>
           </div>
 
         </div>
@@ -166,7 +173,7 @@
 
         <div class="row portfolio-container">
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>App 1</h4>
@@ -176,7 +183,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 3</h4>
@@ -186,7 +193,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>App 2</h4>
@@ -196,7 +203,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-card">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Card 2</h4>
@@ -206,7 +213,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-web">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>Web 2</h4>
@@ -216,7 +223,7 @@
             </div>
           </div>
 
-          <div class="col-lg-4 col-md-6 portfolio-item filter-app">
+          <div class="col-lg-4 col-md-6 portfolio-item">
             <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
             <div class="portfolio-info">
               <h4>App 3</h4>
@@ -307,27 +314,12 @@
       <div class="socials-media text-center">
 
         <ul class="list-unstyled">
-          <li><a href="#"><i class="ion-social-facebook"></i></a></li>
-          <li><a href="#"><i class="ion-social-twitter"></i></a></li>
-          <li><a href="#"><i class="ion-social-instagram"></i></a></li>
-          <li><a href="#"><i class="ion-social-googleplus"></i></a></li>
-          <li><a href="#"><i class="ion-social-tumblr"></i></a></li>
-          <li><a href="#"><i class="ion-social-dribbble"></i></a></li>
+          <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
         </ul>
 
       </div>
 
-      <p>&copy; Copyrights Folio. All rights reserved.</p>
-
-      <div class="credits">
-        <!--
-        All the links in the footer should remain intact.
-        You can delete the links only if you purchased the pro version.
-        Licensing information: https://bootstrapmade.com/license/
-        Purchase the pro version with working PHP/AJAX contact form: https://bootstrapmade.com/buy/?theme=Folio
-      -->
-        Designed by <a href="https://bootstrapmade.com/">BootstrapMade</a>
-      </div>
+      <p>&copy; 2020 Logan Duncan - All rights reserved.</p>
 
     </div>
   </div><!-- End Footer -->
