Add project details

--- a/index.html
+++ b/index.html
@@ -174,62 +174,56 @@
         <div class="row portfolio-container">
 
           <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/portfolio/portfolio-1.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/640x480/nyt1_640x480.png" class="img-fluid" alt="Screenshot of Logan's NYT web api app.">
             <div class="portfolio-info">
-              <h4>App 1</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-1.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 1"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>New York Times Snapshot</h4>
+              <a href="assets/img/portfolio/640x480/nyt1_640x480.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Larger"><i class="bx bx-plus"></i></a>
+              <a href="project-1.html" class="details-link" title="Project Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/portfolio/portfolio-2.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/640x480/rvp1_640x480.png" class="img-fluid" alt="Screenshot of a page made entirely in CSS">
             <div class="portfolio-info">
-              <h4>Web 3</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-2.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Rogue Valley CSS</h4>
+              <a href="assets/img/portfolio/640x480/rvp1_640x480.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Larger"><i class="bx bx-plus"></i></a>
+              <a href="project-2.html" class="details-link" title="Project Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/portfolio/portfolio-3.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/640x480/react-to-do1_640x480.png" class="img-fluid" alt="A to-do tracker made in ReactJS">
             <div class="portfolio-info">
-              <h4>App 2</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-3.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Tasks App</h4>
+              <a href="assets/img/portfolio/640x480/react-to-do1_640x480.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Larger"><i class="bx bx-plus"></i></a>
+              <a href="project-3.html" class="details-link" title="Project Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/portfolio/portfolio-4.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/640x480/orgreview1_640x480.png" class="img-fluid" alt="Full stack review site">
             <div class="portfolio-info">
-              <h4>Card 2</h4>
-              <p>Card</p>
-              <a href="assets/img/portfolio/portfolio-4.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Card 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>OrgReview</h4>
+              <a href="assets/img/portfolio/640x480/orgreview1_640x480.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Larger"><i class="bx bx-plus"></i></a>
+              <a href="project-4.html" class="details-link" title="Project Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/portfolio/portfolio-5.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/640x480/gallery1_640x480.png" class="img-fluid" alt="Image gallery">
             <div class="portfolio-info">
-              <h4>Web 2</h4>
-              <p>Web</p>
-              <a href="assets/img/portfolio/portfolio-5.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="Web 2"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Image Gallery</h4>
+              <a href="assets/img/portfolio/640x480/gallery1_640x480.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Larger"><i class="bx bx-plus"></i></a>
+              <a href="project-5.html" class="details-link" title="Project Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
           <div class="col-lg-4 col-md-6 portfolio-item">
-            <img src="assets/img/portfolio/portfolio-6.jpg" class="img-fluid" alt="">
+            <img src="assets/img/portfolio/640x480/clock1_640x480.png" class="img-fluid" alt="Live clock">
             <div class="portfolio-info">
-              <h4>App 3</h4>
-              <p>App</p>
-              <a href="assets/img/portfolio/portfolio-6.jpg" data-gall="portfolioGallery" class="venobox preview-link" title="App 3"><i class="bx bx-plus"></i></a>
-              <a href="portfolio-details.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
+              <h4>Live Clock</h4>
+              <a href="assets/img/portfolio/640x480/clock1_640x480.png" data-gall="portfolioGallery" class="venobox preview-link" title="View Larger"><i class="bx bx-plus"></i></a>
+              <a href="project-6.html" class="details-link" title="More Details"><i class="bx bx-link"></i></a>
             </div>
           </div>
 
@@ -248,13 +242,10 @@
             <div class="col-lg-6">
               <div class="contact-contact">
 
-                <h2 class="mb-30">GET IN TOUCH</h2>
+                <h2 class="mb-30">Contact Me</h2>
 
                 <ul class="contact-details">
-                  <li><span>23 Main, Street</span></li>
-                  <li><span>New York, United States</span></li>
-                  <li><span>+88 01912704287</span></li>
-                  <li><span>example@example.com</span></li>
+                  <li><span>Please feel free to get in touched via my <a href="#">LinkedIn</a>, or fill out this form and I will respond in a timely manner.</span></li>
                 </ul>
 
               </div>
