Add project detail

--- a/index.html
+++ b/index.html
@@ -101,7 +101,10 @@
             <div class="about-descr">
 
               <p class="p-heading">Hi, my name is Logan!</p>
-              <p class="separator">I love to program functional and efficent code to produce excellent results.</p>
+              <p class="separator">
+                I have experience in a wide variety of programming languages, frameworks, and tools. My focus is making functional websites that do exactly what you need.
+
+              </p>
 
             </div>
 
@@ -128,7 +131,7 @@
 
             <i class="ion-ios-download-outline"></i>
             <span>Database</span>
-            <p class="separator">Well versed in phpMyAdmin, SQL, SSMS. Database integration in Visual Studio</p>
+            <p class="separator">phpMyAdmin, SQL, SSMS</p>
 
           </div>
 
@@ -148,11 +151,11 @@
 
           </div>
 
-          <div class="services-block">
+          <!-- <div class="services-block">
             <i class="ion-ios-browsers-outline"></i>
             <span>Web Skills</span>
             <p class="separator">FILL IN HERE</p>
-          </div>
+          </div> -->
 
         </div>
 
