--- a/project-3.html
+++ b/project-3.html
@@ -82,8 +82,7 @@
             <h3>Tasks App</h3>
             <ul>
               <li><strong>Project date</strong>: October 2020</li>
-              <li><strong>Live at</strong>: <a href='#'>githubpageslink</a></li>
-              <li><strong>GitHub Link</strong>: <a href="#">repository link</a></li>
+              <li><strong>GitHub Link</strong>: <a href="https://github.com/LoganDuncan/React-to-do-app">Repository</a></li>
             </ul>
           </div>
 
