--- a/project-1.html
+++ b/project-1.html
@@ -82,8 +82,7 @@
             <h3>New York Times Snapshot</h3>
             <ul>
               <li><strong>Project date</strong>: May 2020</li>
-              <li><strong>Live at</strong>: <a href='#'>githubpageslink</a></li>
-              <li><strong>GitHub Link</strong>: <a href="#">repository link</a></li>
+              <li><strong>GitHub</strong>: <a href="https://github.com/LoganDuncan/news-api-web-app">repository</a></li>
             </ul>
           </div>
 
