--- a/project-2.html
+++ b/project-2.html
@@ -82,8 +82,8 @@
             <h3>Rogue Valley CSS</h3>
             <ul>
               <li><strong>Project date</strong>: March 2020</li>
-              <li><strong>Live at</strong>: <a href='#'>githubpageslink</a></li>
-              <li><strong>GitHub Link</strong>: <a href="#">repository link</a></li>
+              <li><strong>Try it</strong>: <a href='https://loganduncan.github.io/RogueValleyCSS/'>Live</a></li>
+              <li><strong>GitHub Link</strong>: <a href="https://github.com/LoganDuncan/RogueValleyCSS">Repository</a></li>
             </ul>
           </div>
 
