Add github link

--- a/index.html
+++ b/index.html
@@ -130,8 +130,8 @@
           <div class="services-block">
 
             <i class="ion-ios-download-outline"></i>
-            <span>Database</span>
-            <p class="separator">phpMyAdmin, SQL, SSMS</p>
+            <span>Database and Server</span>
+            <p class="separator">phpMyAdmin, SQL, SSMS, Nginx, Apache</p>
 
           </div>
 
@@ -151,11 +151,11 @@
 
           </div>
 
-          <!-- <div class="services-block">
+          <div class="services-block">
             <i class="ion-ios-browsers-outline"></i>
-            <span>Web Skills</span>
-            <p class="separator">FILL IN HERE</p>
-          </div> -->
+            <span>MTA Certifications</span>
+            <p class="separator">JavaScript, Python, HTML and CSS, Database Fundamentals</p>
+          </div>
 
         </div>
 
@@ -248,7 +248,7 @@
                 <h2 class="mb-30">Contact Me</h2>
 
                 <ul class="contact-details">
-                  <li><span>Please feel free to get in touched via my <a href="#">LinkedIn</a>, or fill out this form and I will respond in a timely manner.</span></li>
+                  <li><span>Please feel free to get in touched via my <a href="https://www.linkedin.com/in/logan-duncan">LinkedIn</a>, or fill out this form and I will respond in a timely manner.</span></li>
                 </ul>
 
               </div>
