--- a/project-1.html
+++ b/project-1.html
@@ -82,7 +82,7 @@
             <h3>New York Times Snapshot</h3>
             <ul>
               <li><strong>Project date</strong>: May 2020</li>
-              <li><strong>GitHub</strong>: <a href="https://github.com/LoganDuncan/news-api-web-app">repository</a></li>
+              <li><a href="https://github.com/LoganDuncan/news-api-web-app">GitHub Repository</a></li>
             </ul>
           </div>
 
@@ -102,16 +102,8 @@
   <!-- ======= Footer ======= -->
   <div id="footer" class="text-center">
     <div class="container">
-      <div class="socials-media text-center">
-
-        <ul class="list-unstyled">
-          <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
-        </ul>
-
-      </div>
 
       <p>&copy; 2020 Logan Duncan - All rights reserved.</p>
-
     </div>
   </div><!-- End Footer -->
 
