--- a/project-3.html
+++ b/project-3.html
@@ -82,7 +82,7 @@
             <h3>Tasks App</h3>
             <ul>
               <li><strong>Project date</strong>: October 2020</li>
-              <li><strong>GitHub Link</strong>: <a href="https://github.com/LoganDuncan/React-to-do-app">Repository</a></li>
+              <li><a href="https://github.com/LoganDuncan/React-to-do-app"></a>GitHub Repository</a></li>
             </ul>
           </div>
 
