--- a/project-4.html
+++ b/project-4.html
@@ -82,8 +82,7 @@
             <h3>OrgReview</h3>
             <ul>
               <li><strong>Project date</strong>: June 2020</li>
-              <li><strong>Live at</strong>: <a href='#'>githubpageslink</a></li>
-              <li><strong>GitHub Link</strong>: <a href="#">repository link</a></li>
+              <li><a href="https://github.com/LoganDuncan/Org-Review">GitHub Repository</a></li>
             </ul>
           </div>
 
