--- a/project-6.html
+++ b/project-6.html
@@ -82,8 +82,8 @@
             <h3>Live Clock</h3>
             <ul>
               <li><strong>Project date</strong>: April 2020</li>
-              <li><strong>Live at</strong>: <a href='#'>githubpageslink</a></li>
-              <li><strong>GitHub Link</strong>: <a href="#">repository link</a></li>
+              <li><a href='https://loganduncan.github.io/digital-clock-web-app/'>Try it!</a></li>
+              <li><a href="https://github.com/LoganDuncan/digital-clock-web-app">GitHub Repository</a></li>
             </ul>
           </div>
 
