--- a/project-5.html
+++ b/project-5.html
@@ -82,8 +82,7 @@
             <h3>Image Gallery</h3>
             <ul>
               <li><strong>Project date</strong>: April 2020</li>
-              <li><strong>Live at</strong>: <a href='#'>githubpageslink</a></li>
-              <li><strong>GitHub Link</strong>: <a href="#">repository link</a></li>
+              <li><a href="https://github.com/LoganDuncan/image-gallery-web-app">GitHub Repository</a></li>
             </ul>
           </div>
 
