--- a/project-4.html
+++ b/project-4.html
@@ -102,13 +102,13 @@
   <!-- ======= Footer ======= -->
   <div id="footer" class="text-center">
     <div class="container">
-      <div class="socials-media text-center">
+      <!-- <div class="socials-media text-center">
 
         <ul class="list-unstyled">
           <li><a href="#"><i class="ion-social-linkedin"></i></a></li>
         </ul>
 
-      </div>
+      </div> -->
 
       <p>&copy; 2020 Logan Duncan - All rights reserved.</p>
 
