--- a/index.html
+++ b/index.html
@@ -7,7 +7,7 @@
 
   <title>Logan Duncan Digital</title>
   <meta content="" name="Logan Duncan Digital - Logan's Portfolio Website">
-  <meta content="" name="keywords">
+  <meta content="A site showcasing Logan's web development work. " name="description">
 
   <!-- Favicons -->
   <link rel="apple-touch-icon" sizes="180x180" href="assets/img/favicon/apple-touch-icon.png">
@@ -30,12 +30,6 @@
   <!-- Template Main CSS File -->
   <link href="assets/css/style.css" rel="stylesheet">
 
-  <!-- =======================================================
-  * Template Name: Folio - v2.1.0
-  * Template URL: https://bootstrapmade.com/folio-bootstrap-portfolio-template/
-  * Author: BootstrapMade.com
-  * License: https://bootstrapmade.com/license/
-  ======================================================== -->
 </head>
 <body>
 
@@ -100,9 +94,10 @@
           <div class="col-lg-7">
             <div class="about-descr">
 
-              <p class="p-heading">Hi, my name is Logan!</p>
+              <p class="p-heading">Hi, my name is Logan,</p>
+              <p class="p-heading">and I am looking to grow as a developer.</p>
               <p class="separator">
-                I have experience in a wide variety of programming languages, frameworks, and tools. My focus is making functional websites that do exactly what you need.
+                My focus is making functional websites that do exactly what you need. I have developed web apps in many different enviornments using the many languages of the web. You can check those out below, and after that is a showcase of some of my work. Thanks for visiting my portfolio!
 
               </p>
 
@@ -247,8 +242,10 @@
 
                 <h2 class="mb-30">Contact Me</h2>
 
+                <p>If you have any questions or comments please get in touch via one of these methods:</p>
                 <ul class="contact-details">
-                  <li><span>Please feel free to get in touched via my <a href="https://www.linkedin.com/in/logan-duncan">LinkedIn</a>, or fill out this form and I will respond in a timely manner.</span></li>
+                  <li>My <a href="https://www.linkedin.com/in/logan-duncan">LinkedIn</a></li>
+                  <li>This contact form, I'll get back within two business days.</li>
                 </ul>
 
               </div>
